NetBSD Problem Report #57769

From www@netbsd.org  Wed Dec 13 05:40:21 2023
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 016001A9238
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 13 Dec 2023 05:40:21 +0000 (UTC)
Message-Id: <20231213054019.B98F71A923C@mollari.NetBSD.org>
Date: Wed, 13 Dec 2023 05:40:19 +0000 (UTC)
From: thorpej@me.com
Reply-To: thorpej@me.com
To: gnats-bugs@NetBSD.org
Subject: mdnsd(8) does not start if the kernel is built without IPv6
X-Send-Pr-Version: www-1.0

>Number:         57769
>Category:       bin
>Synopsis:       mdnsd(8) does not start if the kernel is built without IPv6
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    thorpej
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Dec 13 05:45:00 +0000 2023
>Closed-Date:    Thu Dec 14 17:32:45 +0000 2023
>Last-Modified:  Thu Dec 14 17:32:45 +0000 2023
>Originator:     Jason Thorpe
>Release:        10.0_RC1
>Organization:
CISCy Business
>Environment:
NetBSD sun3-160 10.0_RC1 NetBSD 10.0_RC1 (GENERIC) #0: Wed Nov 29 12:36:24 UTC 2023  mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/sun3/compile/GENERIC sun3
>Description:
sun3-160# mdnsd -debug
socket AF_INET6: Address family not supported by protocol family
sun3-160# 

>How-To-Repeat:
See above.
>Fix:
Not provided.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: bin-bug-people->thorpej
Responsible-Changed-By: thorpej@NetBSD.org
Responsible-Changed-When: Wed, 13 Dec 2023 07:12:09 +0000
Responsible-Changed-Why:
Take.


State-Changed-From-To: open->analyzed
State-Changed-By: thorpej@NetBSD.org
State-Changed-When: Wed, 13 Dec 2023 07:12:09 +0000
State-Changed-Why:
Root cause identified.


State-Changed-From-To: analyzed->pending-pullups
State-Changed-By: thorpej@NetBSD.org
State-Changed-When: Wed, 13 Dec 2023 07:17:55 +0000
State-Changed-Why:
Just needs to get into netbsd-10.


From: "Jason R Thorpe" <thorpej@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57769 CVS commit: src/external/apache2/mDNSResponder/dist/mDNSPosix
Date: Wed, 13 Dec 2023 07:15:41 +0000

 Module Name:	src
 Committed By:	thorpej
 Date:		Wed Dec 13 07:15:41 UTC 2023

 Modified Files:
 	src/external/apache2/mDNSResponder/dist/mDNSPosix: mDNSPosix.c

 Log Message:
 mDNSPlatformInit(): If we fail to create an IPv6 socket, ignore the
 error and just continue without IPv6 support.

 PR bin/57769


 To generate a diff of this commit:
 cvs rdiff -u -r1.19 -r1.20 \
     src/external/apache2/mDNSResponder/dist/mDNSPosix/mDNSPosix.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57769 CVS commit: [netbsd-10] src/external/apache2/mDNSResponder/dist/mDNSPosix
Date: Thu, 14 Dec 2023 17:24:42 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Thu Dec 14 17:24:42 UTC 2023

 Modified Files:
 	src/external/apache2/mDNSResponder/dist/mDNSPosix [netbsd-10]:
 	    mDNSPosix.c

 Log Message:
 Pull up following revision(s) (requested by thorpej in ticket #493):

 	external/apache2/mDNSResponder/dist/mDNSPosix/mDNSPosix.c: revision 1.20

 mDNSPlatformInit(): If we fail to create an IPv6 socket, ignore the
 error and just continue without IPv6 support.

 PR bin/57769


 To generate a diff of this commit:
 cvs rdiff -u -r1.17.6.1 -r1.17.6.2 \
     src/external/apache2/mDNSResponder/dist/mDNSPosix/mDNSPosix.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: thorpej@NetBSD.org
State-Changed-When: Thu, 14 Dec 2023 17:32:45 +0000
State-Changed-Why:
Pull-up to netbsd-10 completed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2023 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.