Pull up following revision(s) (requested by thorpej in ticket #493):

external/apache2/mDNSResponder/dist/mDNSPosix/mDNSPosix.c: revision 1.20

mDNSPlatformInit(): If we fail to create an IPv6 socket, ignore the
error and just continue without IPv6 support.

PR bin/57769